# BataljaCompetitionDashboard

./: .env.sample  .gitignore  Cargo.toml  README.md  flake.nix  migration.sh  setup_folders.sh
migrations/2023-10-13-141425_initial_setup/: down.sql  up.sql
src/: main.rs
src/controllers/: command_executor.rs  competitions.rs  elo.rs  file_handler.rs  jwt.rs  ldap.rs  matchmaker_2v2.rs  mod.rs
src/db/: mod.rs  models.rs  operations_bot.rs  operations_competition.rs  operations_db.rs  operations_game2v2.rs  operations_teams.rs  operations_users.rs  schema.rs
src/models/: bot.rs  competition.rs  errors.rs  game_2v2.rs  game_player_stats.rs  mod.rs  student.rs  team.rs  user.rs
src/routes/: bot_upload.rs  bot_win_rates.rs  competition_attended.rs  competition_create.rs  competition_id.rs  competition_pack.rs  competition_rounds.rs  competition_running.rs  competition_team_count.rs  game_get_public.rs  game_id.rs  game_log.rs  game_toggle_public.rs  login.rs  matchmaking_test.rs  me.rs  mod.rs  team_bot_change.rs  team_bots.rs  team_create.rs  team_disband.rs  team_get.rs  team_get_all.rs  team_id.rs  team_join.rs  team_kick.rs  team_leave.rs  team_rename.rs  user_id.rs  user_me.rs
