[package]
name = "batalja_dashboard_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
ldap3 = "0.11.3"
log = "0.4.20"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = "1.33.0"
uuid = "1.4.1"
