[package]
name = "batalja_dashboard_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-multipart = "0.6.1"
actix-files = "0.6"
actix-web-httpauth = "0.8.1"
diesel = { version = "2.0.4", features = ["mysql", "uuid", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
ldap3 = "0.11.3"
log = "0.4.20"
once_cell = "1.18.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"]}
tokio-cron-scheduler = "0.5.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] } # date
zip = "0.5"
rand = "0.8.5"
rayon = "1.8.0"
libc = "0.2.149"
wait-timeout = "0.2.0"
